# hits_na_vigule

./: .gitignore  Dockerfile  LICENSE  README  README.md  controller.db  docker-compose.yml  how --name-only 8fb0e2e  pyproject.toml  run.py  schemas.py  test_api.py
api/endpoints/: controller.py
controller/: database.py  main.py  schemas.py
controller/api/endpoints/: reader.py
controller/services/: secrets_service.py
cpp_controller/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_linux.sh
cpp_controller/include/: crypto.h  database.h  totp.h  user_service.h
cpp_controller/src/: crypto.cpp  database.cpp  main.cpp  totp.cpp  user_service.cpp
mobile_part/: build.gradle.kts  settings.gradle.kts
mobile_part/app/: build.gradle.kts
mobile_part/app/src/androidTest/java/com/unewexp/key_app/: ExampleInstrumentedTest.kt
mobile_part/app/src/main/: AndroidManifest.xml
mobile_part/app/src/main/java/com/unewexp/key_app/: MainActivity.kt  QRGenerator.kt  SecureStorageHelper.kt  TOTPScreen.kt  TotpGenerator.kt
mobile_part/app/src/main/java/com/unewexp/key_app/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile_part/app/src/main/res/values/: strings.xml  themes.xml
mobile_part/app/src/main/res/xml/: backup_rules.xml
mobile_part/app/src/test/java/com/unewexp/key_app/: ExampleUnitTest.kt
mobile_part/gradle/wrapper/: gradle-wrapper.properties
mobile_part/mobile_part-main/app/src/androidTest/java/com/unewexp/key_app/: ExampleInstrumentedTest.kt
mobile_part/mobile_part-main/app/src/main/java/com/unewexp/key_app/: MainActivity.kt  ScannerScreen.kt  SecureStorageHelper.kt
mobile_part/mobile_part-main/app/src/main/java/com/unewexp/key_app/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile_part/mobile_part-main/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile_part/mobile_part-main/app/src/main/res/values/: strings.xml  themes.xml
mobile_part/mobile_part-main/gradle/wrapper/: gradle-wrapper.properties
secure_keys/: controller_private.pem  controller_public.pem  master.key  rsa_password.txt
services/: reader_service.py  rsa_service.py
static/css/: styles.css
static/js/: reader.js
templates/: reader.html
templates/partials/: error.html  result.html
