[tool.poetry]
name = "controller"
version = "0.1.0"
description = ""
authors = ["Viktoriya Klyueva <vika_klyueva@inbox.ru>"]
readme = "README.md"
packages = [{include = "controller"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.0"
pyotp = "^2.9.0"
python-multipart = "^0.0.6"
qrcode = {extras = ["pil"], version = "^8.2"}
cryptography = "^43.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"