[tool.poetry]
name = "door-controller"
version = "0.1.0"
description = "Система контроля доступа с TOTP аутентификацией"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.0"
pyotp = "^2.9.0"
python-multipart = "^0.0.6"
qrcode = {extras = ["pil"], version = "^8.2"}
cryptography = "^43.0.0"
requests = "^2.32.5"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"